fix reference section during dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,7 +992,7 @@ label.srs-toggle {
 }
 
 .related h4 {
-    color: #888888;
+    color: var(--content-color);
     padding-top: 20px;
     padding-left: 20px;
 }
@@ -1013,7 +1013,9 @@ label.srs-toggle {
 }
 
 .related-group:hover {
-    background-color: #ededed !important;
+    /* background-color: #ededed !important; */
+    background-color: var(--overlay-background-color) !important;
+    border: solid 1px var(--content-background-color) !important;
 }
 
 .related-group a {
@@ -1299,11 +1301,13 @@ figcaption {
     }
 
     .related-group {
-        background-color: #ededed !important;
+        /* background-color: #ededed !important; */
+        background-color: var(--content-background-color) !important;
         margin-left: 10px;
         width: 90% !important;
         height: 100%;
         border-radius: 10px;
+        border: solid 1px var(--content-background-color) !important;
         cursor: pointer;
     }
 }
